--- a/puppet/hiera/hiera.yaml
+++ b/puppet/hiera/hiera.yaml
@@ -1,3 +1,10 @@
 ---
+:backends:
+  - yaml
+:hierarchy:
+  - defaults
+  - "%{clientcert}"
+  - global
 
-
+:yaml:
+  :datadir: '/vagrant/puppet/hieradata'
