Fix hiera hierarchy order.

--- a/puppet/files/hiera.yaml
+++ b/puppet/files/hiera.yaml
@@ -2,10 +2,9 @@
 :backends:
   - yaml
 :hierarchy:
+  - "%{::clientcert}"
+  - "%{::environment}"
   - defaults
-  - "%{environment}"
-  - "%{clientcert}"
-  - global
 
 :yaml:
   :datadir: '/etc/puppet/environments/%{::environment}/hieradata'
