--- a/puppet/files/hiera.yaml
+++ b/puppet/files/hiera.yaml
@@ -2,8 +2,9 @@
 :backends:
   - yaml
 :hierarchy:
-  - "%{::clientcert}"
+  - nodes/"%{::clientcert}"
   - "%{::environment}"
+  - accounts
   - defaults
 
 :yaml:
