Add separate user, group, usergroup and ssh_key files to hierarchy.

--- a/puppet/files/hiera.yaml
+++ b/puppet/files/hiera.yaml
@@ -4,7 +4,10 @@
 :hierarchy:
   - nodes/"%{::clientcert}"
   - "%{::environment}"
-  - accounts
+  - users
+  - groups
+  - usergroups
+  - ssh_keys
   - defaults
 
 :yaml:
