--- a/puppet/files/hiera.yaml
+++ b/puppet/files/hiera.yaml
@@ -1,5 +1,6 @@
 ---
 :backends:
+  - eyaml
   - yaml
 :hierarchy:
   - nodes/"%{::clientcert}"
@@ -12,3 +13,8 @@
 
 :yaml:
   :datadir: '/etc/puppet/environments/%{::environment}/hieradata'
+:eyaml:
+  :datadir: '/etc/puppet/environments/%{::environment}/hieradata'
+  :extension: 'yaml'
+  :pkcs7_private_key: '/var/lib/puppet/eyaml/keys/private_key.pkcs7.pem'
+  :pkcs7_public_key:  '/var/lib/puppet/eyaml/keys/public_key.pkcs7.pem'
