Fix node entry in hierarchy.

--- a/puppet/files/hiera.yaml
+++ b/puppet/files/hiera.yaml
@@ -3,7 +3,7 @@
   - eyaml
   - yaml
 :hierarchy:
-  - nodes/"%{::clientcert}"
+  - "nodes/%{::clientcert}"
   - "%{::environment}"
   - users
   - groups
