Add "nodegroups/%{nodegroup}" to hiera hierarchy.

--- a/puppet/files/hiera.yaml
+++ b/puppet/files/hiera.yaml
@@ -5,6 +5,7 @@
 :hierarchy:
   - greencard
   - "nodes/%{::clientcert}"
+  - "nodegroups/%{nodegroup}"
   - "environments/%{::environment}"
   - "os/%{::osfamily}/%{::operatingsystem}/%{::operatingsystemrelease}"
   - "os/%{::osfamily}/%{::operatingsystem}"
